
ChangeLog
 [ + added, - removed, * changed ]
 * 02Sep2016 Removes strict XML version check - Lau Mercadal
 * 08Ago2016 Fixes make uninstall
 * 04Aug2016 Fixed bug in configure macro to check for pebs sampling
 * 29Jul2016 Upgraded to v3.4.0
 * 28Jul2016 Adds XML option (cpu-events) to specify the emission frequency of CPU events
 * 26Jul2016 Repeat file open if the assigned fd for the trace file is 0
 * 26Jul2016 Repeat file open if the assigned fd for the trace file is 0
 * 14Jul2016 Fixed bug in malloc wrappers of null THREADID in combination with OpenMP 
 * 08Jul2016 Removes bootstrap warning due to shared-libraries test Makefile.am
 debug rules.
 * 06Jul2016 Fixes shared-libraries test
 + 06Jul2016 Added posix_memalign to the list of memory wrappers 
 + 05Jul2016 Always enable POSIX clock and control it via EXTRAE_USE_POSIX_CLOCK
 environment variable.
 * 04Jul2016 Enable peps sampling by default
 + 28Jun2016 Adds .gitignore with build generated files
 + 28Jun2016 Added instrumentation wrappers for memkind_malloc* routines
 * 28Jun2016 Fixes tests that fail when Extrae is built from within a folder
 * 15Jun2016 Consider callers when computing buffer size for IO calls
 * 13Jun2016 Fix compilation error when enabling heterogeneous
 * 09Jun2016 JAVA tracer tests now run after installation.
             Fix ompss tests reference files.
	     Fix MPI Iprobe_wait test.
 + 03May2016 Add recording of MPI one-sided operations' size
 * 23May2016 Rank 0 was exiting if XML file couldn't be opened, leaving the others stalled in a collective
 + 17May2016 Add wrappers and merger support to instrument open, fopen and the string name of the opened files
 * 13May2016 Add MPI_Finalize to dlsym PMPI hook
 + 12May2016 Add configure option to use dlsym as PMPI hook
 * 12May2016 Fixed table of states colors with missing states
 + 12May2016 Added wrappers to instrument both 32 and 64-bit I/O calls preadv, pwritev, preadv64, pwritev64