@@ -1,7 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
- * 02Sep2016 Removes strict XML version check - Lau Mercadal
+ * 08Sep2016 Fixes BFD configure check
+ * 02Sep2016 Removes strict XML version check
  * 08Ago2016 Fixes make uninstall
  * 04Aug2016 Fixed bug in configure macro to check for pebs sampling
  * 29Jul2016 Upgraded to v3.4.0
